# blink-waveforms-sabi

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
configs/: opt.yml
data/: LICENSE  demographics.csv
data/sub-00/eog/: sub-00_task-ODDBALL_eog.edf  sub-00_task-RESTING_eog.edf
data/sub-01/eog/: sub-01_task-ODDBALL_eog.edf  sub-01_task-RESTING_eog.edf
data/sub-02/eog/: sub-02_task-ODDBALL_eog.edf  sub-02_task-RESTING_eog.edf
data/sub-03/eog/: sub-03_task-ODDBALL_eog.edf  sub-03_task-RESTING_eog.edf
data/sub-04/eog/: sub-04_task-ODDBALL_eog.edf  sub-04_task-RESTING_eog.edf
data/sub-05/eog/: sub-05_task-ODDBALL_eog.edf  sub-05_task-RESTING_eog.edf
data/sub-06/eog/: sub-06_task-ODDBALL_eog.edf  sub-06_task-RESTING_eog.edf
data/sub-07/eog/: sub-07_task-ODDBALL_eog.edf  sub-07_task-RESTING_eog.edf
data/sub-08/eog/: sub-08_task-ODDBALL_eog.edf  sub-08_task-RESTING_eog.edf
data/sub-09/eog/: sub-09_task-ODDBALL_eog.edf  sub-09_task-RESTING_eog.edf
data/sub-10/eog/: sub-10_task-ODDBALL_eog.edf  sub-10_task-RESTING_eog.edf
data/sub-11/eog/: sub-11_task-ODDBALL_eog.edf  (+1 more)
results/: KW-Dunn_test.html  PR01_summary_HC.csv  PR01_summary_eMCS.csv  PR01_summary_pDoC.csv  aggregated_features.csv  aggregated_features_folded_with_demographics.csv  aggregated_features_with_demographics.csv  logreg_covariate_results.csv
scripts/: demographics_data.py  eog_analysis.py  feature_stats.py  features_summary_with_cv.py
src/eogtools/: blink_extraction.py  eog.py
src/utils/: events.py  features.py  plotting.py  rawtools.py
(+56 files in other folders)
